--- a/materi3.html
+++ b/materi3.html
@@ -100,11 +100,11 @@
                     <div class="col " data-aos="zoom-in" data-aos-delay="100">
                         <div class="icon-box">
                             <div class="card">
-                                <img src="assets/img/portfolio/Picture5.jpg" class="card-img-top w-lg-50" alt="...">
+                                <img src="assets/img/portfolio/Picture5.jpg" class="card-img-top w-lg-50 w-sm-50" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title text-center">Gambar 5. Es Dawet</h5>
-                                    <h5 class="card-title text-center">Sumber: https://caramembuat.id/cara-membuat-es-pisang-ijo/</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <p class="card-title text-center">Gambar 5. Es Dawet</p>
+                                    <p class="card-title text-center">Sumber: https://caramembuat.id/cara-membuat-es-pisang-ijo/</p>
+                                    <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 
                                 </div>
                             </div>
