--- a/materi3.html
+++ b/materi3.html
@@ -104,8 +104,8 @@
                                 <div class="card-body">
                                     <p class="card-title text-center">Gambar 5. Es Dawet</p>
                                     <p class="card-title text-center">Sumber: https://caramembuat.id/cara-membuat-es-pisang-ijo/</p>
-                                    <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-
+                                    <p class="card-text mt-3">Es Dawet adalah salah satu minuman tradisional asli Indonesia. Dawet berasal dari Desa Jabung, Ponorogo tanpa warna atau bening, tercatat dalam prasasti Taji Ponorogo pada abad 10. Kemudian mulai dikenal kembali pada
+                                        abad 15 pada zaman bupati Ponorogo Bathoro Katong, karena bermanfaat menyembuhkan orang sakit.</p>
                                 </div>
                             </div>
                             <p>Indonesia dikenal sebagai Negara yang sangat beragam, keragaman dan kekayaan budaya yang berlimpah dengan memiliki 742 bahasa/dialek dari keragaman 478 suku bangsa. Suku bangsa yang tersebar dari Sabang hingga Merauke. </p>
