--- a/materi3.html
+++ b/materi3.html
@@ -108,13 +108,11 @@
                                         abad 15 pada zaman bupati Ponorogo Bathoro Katong, karena bermanfaat menyembuhkan orang sakit.</p>
                                 </div>
                             </div>
-                            <p>Indonesia dikenal sebagai Negara yang sangat beragam, keragaman dan kekayaan budaya yang berlimpah dengan memiliki 742 bahasa/dialek dari keragaman 478 suku bangsa. Suku bangsa yang tersebar dari Sabang hingga Merauke. </p>
-                            <p>Luasa wilayah Indonesia dari ujung barat dan timur Indonesia mencapai 5 120 km yang jika ditempuuh dengan menggunakan pesawat kurang lebih 12 jam waktu penerbangan. Sementara panjang dari selatan ke utara dengan luasan 1700
-                                km. Sedangkan panjang jarak dari selatan ke utara, lebih dari 1.700 km. Bayangkan, panjang pantai Indonesia sekitar 104.000 km, menduduki urutan nomor empat sebagai negara yang memiliki pantai terpanjang di dunia," katanya.
+                            <p>Coba Perhatikan!</p>
+                            <p>Ratna dan Galuh menjadi panitia dalam kegiatan Gerebeg. Ratna dan Galuh bertugas untuk menyajikan es dawet kepada para tamu. Mereka akan mencampur air gula merah beserta dawet dan santen kental. Untuk memperoleh rasa yang pas,
+                                keduanya menetapkan beberapa campuran yang diujicobakan. Campuran manakah yang memiiki ampuran air gula aren terkuat? Berikan argument ananda.
                             </p>
-
-                            <p>Sedangkan luas daratan Indonesia, menurutnya, lebih dari dua juta kilometer, dengan luas lautan hampir tiga kali lipatnya. Artinya, dua per tiga wilayah Indonesia adalah lautan. "Hampir seperti penduduk Takalar yang mayoritas
-                                berprofesi di laut," katanya.</p>
+                            <p class="mt-3">Campuran 1.</p>
                         </div>
                     </div>
                 </div>
