--- a/materi3.html
+++ b/materi3.html
@@ -100,7 +100,8 @@
                     <div class="col " data-aos="zoom-in" data-aos-delay="100">
                         <div class="icon-box">
                             <div class="card">
-                                <img src="assets/img/portfolio/Picture5.jpg" class="card-img-top w-lg-50 w-sm-50" alt="...">
+                                <div class=" text-center"><img src="assets/img/portfolio/Picture5.jpg" class="card-img-top w-lg-50 w-50 " alt="..."></div>
+
                                 <div class="card-body">
                                     <p class="card-title text-center">Gambar 5. Es Dawet</p>
                                     <p class="card-title text-center">Sumber: https://caramembuat.id/cara-membuat-es-pisang-ijo/</p>
