--- a/materi3.html
+++ b/materi3.html
@@ -114,6 +114,28 @@
                                 keduanya menetapkan beberapa campuran yang diujicobakan. Campuran manakah yang memiiki ampuran air gula aren terkuat? Berikan argument ananda.
                             </p>
                             <p class="mt-3">Campuran 1.</p>
+                            <div class="d-flex">
+                                <p>2 gelas air gula aren + dawet </p>
+                                <p>3 sendok santan kental</p>
+                            </div>
+                            <p class="mt-3">Campuran 2.</p>
+                            <div class="d-flex">
+                                <p>5 gelas air gula aren + dawet </p>
+                                <p>9 sendok santan kental</p>
+                            </div>
+                            <p class="mt-3">Campuran 3.</p>
+                            <div class="d-flex">
+                                <p>1 gelas air gula aren + dawet </p>
+                                <p>2 sendok santan kental</p>
+                            </div>
+                            <p class="mt-3">Campuran 4.</p>
+                            <div class="d-flex">
+                                <p>3 gelas air gula aren + dawet </p>
+                                <p>5 sendok santan kental</p>
+                            </div>
+                            <p class="mt-3">Jika setiap campuran dibentuk ke dalam presentase, berapa masing-masing presentase campuran yang terbentuk?</p>
+                            <p>Ananda bisa membentuk pecahan dari campuran yang ada.</p>
+                            <p>Campuran 1. Campuran yang terdiri dari 2 gelas air gula dan dawet, berarti presentase kekentalan gula aren dan dawet adalah …...</p>
                         </div>
                     </div>
                 </div>
