--- a/materi4.html
+++ b/materi4.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Materi</title>
+    <title>Materi | Perbandingan Senilai</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -90,63 +90,38 @@
     <main id="main">
 
         <!-- ======= Services Section ======= -->
-        <section class="team section-bg">
+        <section id="services" class="services section-bg">
             <div class="container" data-aos="fade-up">
-
                 <div class="section-title">
-                    <h2>materi</h2>
+                    <h2>Perbandingan Senilai</h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="100">
-                        <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="assets/img/team/books2.png" class="img-fluid" alt=""></div>
-                            <div class="member-info">
-                                <a href="materi1.html">
-                                    <h4>Konsep Perbandingan (Rasio dan Proporsi)</h4>
-                                </a>
+                    <div class="col " data-aos="zoom-in" data-aos-delay="100">
+                        <div class="icon-box">
+                            <h4 class="fw-bold">Perbandingan Senilai</h4>
+                            <h5 class="fw-bold">Aktivitas 1.</h5>
+                            <p>Perhatikan permasalahan berikut ini.</p>
+                            <div class="card">
+                                <div class=" text-center mt-2"><img src="assets/img/portfolio/Picture6.jpg" class="card-img-top w-lg-50 w-50 " alt="..."></div>
+                                <div class="card-body">
+                                    <p class="card-title text-center">Gambar 6. Es Pisang Ijo</p>
+                                    <p class="card-title text-center">Sumber: https://caramembuat.id/cara-membuat-es-pisang-ijo/</p>
+                                </div>
                             </div>
+                            <p class="mt-3">Situasi A.</p>
+                            <p class="mt-3">Es Pisang Ijo manakah yang lebih kental, 3 takar sirup merah dicampur 2 gelas air putih atau dicampur 4 takar sirup merah dicampur 2 gelas air putih?
+                            </p>
+                            <p class="mt-3">Situasi B.</p>
+                            <p class="mt-3">Es Pisang Ijo manakah yang lebih kental, 3 takar sirup merah dicampur 2 gelas air putih atau dicampur 4 bungkus sirup merah dicampur 2 gelas air putih?</p>
+                            <p class="mt-3">Berikan argumentasi ananda.</p>
+
                         </div>
                     </div>
-
-                    <div class="col-lg-4 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="200">
-                        <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="assets/img/team/books2.png" class="img-fluid" alt=""></div>
-                            <div class="member-info">
-                                <a href="materi2.html">
-                                    <h4>Perbandingan Berbalik Nilai</h4>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
-                        <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="assets/img/team/books3.png" class="img-fluid" alt=""></div>
-                            <div class="member-info">
-                                <a href="materi3.html">
-                                    <h4>Rasio</h4>
-                                </a>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 mt-4 mt-lg-4" data-aos="zoom-in" data-aos-delay="400">
-                        <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="assets/img/team/books2.png" class="img-fluid" alt=""></div>
-                            <div class="member-info">
-                                <a href="materi4.html">
-                                    <h4>Perbandingan Senilai</h4>
-                                </a>
-
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
 
             </div>
         </section>
+        <!-- End Services Section -->
 
     </main>
     <!-- End #main -->
@@ -196,5 +171,7 @@
     <script src="assets/js/main.js"></script>
 
 </body>
+
+</html>
 
 </html>
