--- a/materi4.html
+++ b/materi4.html
@@ -114,10 +114,20 @@
                             <p class="mt-3">Situasi B.</p>
                             <p class="mt-3">Es Pisang Ijo manakah yang lebih kental, 3 takar sirup merah dicampur 2 gelas air putih atau dicampur 4 bungkus sirup merah dicampur 2 gelas air putih?</p>
                             <p class="mt-3">Berikan argumentasi ananda.</p>
-
+                            <h5 class="fw-bold">Aktivitas 2.</h5>
+                            <div class="card">
+                                <div class="d-flex text-center gap-1">
+                                    <img src="assets/img/portfolio/Picture7.jpg" class="card-img-top w-lg-50 w-50 " alt="...">
+                                    <img src="assets/img/portfolio/Picture8.jpg" class="card-img-top w-lg-50 w-50 mt-2" alt="..."></div>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-title text-center">Gambar 6. Es Pisang Ijo</p>
+                                <p class="card-title text-center">Sumber: https://caramembuat.id/cara-membuat-es-pisang-ijo/</p>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
 
             </div>
         </section>
