--- a/materi4.html
+++ b/materi4.html
@@ -116,13 +116,24 @@
                             <p class="mt-3">Berikan argumentasi ananda.</p>
                             <h5 class="fw-bold">Aktivitas 2.</h5>
                             <div class="card">
-                                <div class="d-flex text-center gap-1">
+                                <div class="mt-2 d-flex text-center gap-1">
                                     <img src="assets/img/portfolio/Picture7.jpg" class="card-img-top w-lg-50 w-50 " alt="...">
                                     <img src="assets/img/portfolio/Picture8.jpg" class="card-img-top w-lg-50 w-50 mt-2" alt="..."></div>
                             </div>
                             <div class="card-body">
-                                <p class="card-title text-center">Gambar 6. Es Pisang Ijo</p>
+                                <p class="card-title text-center">Gambar 7. Budaya Indonesia</p>
                                 <p class="card-title text-center">Sumber: https://caramembuat.id/cara-membuat-es-pisang-ijo/</p>
+                            </div>
+                            <p class="mt-3">Gerebeg-an adalah perayaan rutin tahunan yang diadakan masyarakat Jawa untuk memperingati peristiwa penting. Upacara ini melibatkan warga keratin, segenap aparat kerajaan dan lapisan masyarakat. Acara gerebeg mauled, syawal
+                                dan kegiatan grebeg lainnya yang sering dilaksanakan oleh Keraton Kasunanan Surakarta Hadinigrat Solo dan Yogyakarta.</p>
+                            <div class="mt-2">Tahun 2023 diperkirakan banyak pihak yang terlibat, partisipan laki-laki diperkirakan lebih banyak dari perempuan, jumlahnya perbandingan 7 terhadap 9. Terdapat 2100 perempuan yang terlibat dalam acara grebeg Syawal 2023. Berapa
+                                jumlah laki-laki partisipan yang terlibat? Sarah dan Ratna mencoba menghitung perbandingan jumlah partisipan laki-laki dan perempuan yang terlibat dalam kegiatan acara.
+                                <p>Sarah menyatakan jumlah laki-laki 3800 orang, periksalah apakah pernyataan Sarah tersebut benar?</p>
+                                <p>Kevin menyatakan bahwa 2700 partisipan laki-laki yang ikut dalam kegiatan grebeg, Dia menunjukkan cara penyelesaian seperti berikut.</p>
+
+                                <img src="assets/img/portfolio/rumus1.png " class="w-lg-50 img-fluid" alt="">
+                                <p class="mt-3">Periksalah apakah perhitungan Kevin benar, bandingkan dengan temuan Sarah dan Ratna. Berikan argumentasi Ananda.</p>
+                                <img src="assets/img/portfolio/Picture9.png " class="w-lg-50 img-fluid mt-2" alt="">
                             </div>
                         </div>
                     </div>
