--- a/index.html
+++ b/index.html
@@ -137,9 +137,8 @@
         <section id="contact" class="contact">
             <div class="container" data-aos="fade-up">
 
-                <div class="section-judul">
-                    <h5>Tabel 1. Capaian Pembelajaran dan Tujuan Pembelajaran </h5>
-
+                <div class="section-title">
+                    <h2>Tabel 1. Capaian Pembelajaran dan Tujuan Pembelajaran </h2>
                 </div>
 
                 <div class="row">
