--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <div class="container">
             <div class="row">
-                <div id="carouselExampleIndicators" class="carousel slide">
+                <!-- <div id="carouselExampleIndicators" class="carousel slide">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -94,8 +94,8 @@
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="visually-hidden">Next</span>
                     </button>
-                </div>
-                <div class="col-lg-6 d-flex d-sm-none flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+                </div> -->
+                <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
                     <h1>Modul Pembelajaran Etnomatematika Berbasis Website Untuk Meningkatkan Kemampuan Literasi Matematis.</h1>
                     <h2>Modul ini merupakan bahan ajar yang dikembangkan agar peserta didik dapat belajar secara mandiri dan diharapkan dapat menumbuhkan kecintaan dan kebanggaan peserta didik terhadap budaya Indonesia.</h2>
                     <div class="d-flex justify-content-center justify-content-lg-start">
@@ -103,7 +103,7 @@
                         <a href="https://www.youtube.com/watch?v=QUT-k6v63dw&pp=ygUTbWF0ZXJpIHBlcmJhbmRpbmdhbg%3D%3D" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Tonton Video</span></a>
                     </div>
                 </div>
-                <div class="col-lg-6 order-1 d-sm-none order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
+                <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
                     <img src="assets/img/budaya1.jpg" class="img-fluid animated rounded-3" alt="">
                 </div>
             </div>
