--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
                     <h2>Modul ini merupakan bahan ajar yang dikembangkan agar peserta didik dapat belajar secara mandiri dan diharapkan dapat menumbuhkan kecintaan dan kebanggaan peserta didik terhadap budaya Indonesia.</h2>
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <a href="#about" class="btn-get-started scrollto">Ayo Belajar</a>
-                        <a href="https://www.youtube.com/watch?v=QUT-k6v63dw&pp=ygUTbWF0ZXJpIHBlcmJhbmRpbmdhbg%3D%3D" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Tonton Video</span></a>
+                        <button class="btn btn-watch-video" id="play-btn"><i class="bi bi-play-circle"></i><span><audio id="track">
+                            <source src="./assets/TARI - WONDERLAND NUSANTARA  Special Perfomance  BOCIL SQUAD  MOMMY BINTANG.mp3" type="audio/mpeg" />
+                          </audio>Music</span>
+                        </button>
                     </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
