--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <!-- ======= Hero Section ======= -->
     <!-- ======= Hero Slider Section ======= -->
-    <section id="hero-slider" class="hero-slider">
+    <section id="hero-slider" class="hero-slider mt-5">
         <div class="container-md" data-aos="fade-in">
             <div class="row">
                 <div class="col-12">
