--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
                     <li><a class="nav-link scrollto" href="#services">Uji Kompetensi</a></li>
                     <li><a class="nav-link   scrollto" href="#portfolio">Daftar Pustaka</a></li>
                     <li><a class="nav-link" href="petunjuk.html">Petunjuk Penggunaan</a></li>
-                    <li><a class="getstarted scrollto" href="#about">Contact Us</a></li>
+                    <li><button class="getstarted btn btn-watch-video play" id="play-btn"><i class="bi bi-play-circle mx-2"></i><span><audio id="track">
+                        <source src="./assets/TARI - WONDERLAND NUSANTARA  Special Perfomance  BOCIL SQUAD  MOMMY BINTANG.mp3" type="audio/mpeg" />
+                      </audio>Music</span>
+                    </button>
+                    </li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
