--- a/materi1.html
+++ b/materi1.html
@@ -49,7 +49,7 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+                    <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
                     <li><a class="nav-link scrollto" href="materi.html">Materi</a></li>
                     <li><a class="nav-link scrollto" href="#">Uji Kompetensi</a></li>
                     <li><a class="nav-link   scrollto" href="#">Daftar Pustaka</a></li>
