--- a/index.html
+++ b/index.html
@@ -263,11 +263,8 @@
                 <div class="row">
 
                     <div class="col footer-contact">
-                        <h3>Pika Merliza, M.Pd</h3>
-                        <p>Jl. Ki Hajar Dewantara 15A Iringmulyo, Metro Timur,<br> Kota Metro, Lampung.<br><br>
-                            <strong>Phone:</strong> (628)218-270-2390<br>
-                            <strong>Email:</strong> pikamerliza@metrouniv.ac.id<br>
-                        </p>
+                        <h3>Tim Pengembang Website</h3>
+
                     </div>
                 </div>
             </div>
