--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
                 <div class="row">
 
-                    <div class="col-lg-7 d-flex align-items-stretch">
+                    <div class="col d-flex align-items-stretch">
                         <div class="info">
                             <table class="table">
                                 <thead>
@@ -189,7 +189,7 @@
                                             dapat menerapkan operasi aritmetika pada bilangan real, dan memberikan estimasi/perkiraan dalam menyelesaikan masalah termasuk berkaitan dengan (literasi finansial). Peserta didik dapat menggunakan faktorisasi
                                             prima dan pengertian rasio (skala, proporsi, dan laju perubahan) dalam penyelesaian masalah. </td>
                                         <td>
-                                            1. Peserta didik mampu menyelesaikan permasalahan berkaitan dengan konsep rasio (skala, proporsi) dalam keseharian murid
+                                            1. Peserta didik mampu menyelesaikan permasalahan berkaitan dengan konsep rasio (skala, proporsi) dalam kehidupan sehari-hari.
                                         </td>
                                     </tr>
                                     <tr>
@@ -205,34 +205,7 @@
                         </div>
 
                     </div>
-                    <div class="col-lg-5 mt-5 mt-lg-0 d-flex align-items-stretch">
-                        <div class="info">
-                            <p>
-                                Peserta didik dapat menyelesaikan permasalahan dalam membedakan proporsi dan rasio
-                            </p>
-                            <table class="table">
-                                <thead>
-                                    <tr>
 
-                                        <th scope="col">Konteks</th>
-                                        <th scope="col">Sosial-Budaya</th>
-
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <th scope="col">Konten</th>
-                                        <th>Bilangan</th>
-                                    </tr>
-                                    <tr>
-                                        <th>Level Kognitif</th>
-                                        <th>Pemahaman, Penerapan, Penalaran</th>
-                                    </tr>
-
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
 
                 </div>
 
