--- a/index.html
+++ b/index.html
@@ -230,22 +230,22 @@
                 </div>
             </div>
         </div> -->
-
+        <!-- 
         <div class="footer-top">
             <div class="container">
                 <div class="row">
 
                     <div class="col footer-contact">
-                        <h3>Tim Pengembang Website</h3>
+                        <h5>Tim Pengembang Website</h5>
 
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="container footer-bottom clearfix">
             <div class="copyright">
-                &copy; Copyright 2023 - <strong><span>Pika Merliza</span></strong>. IAIN Metro
+                &copy; Copyright 2023 - <strong><span>Tim Pengembang</span></strong>. IAIN Metro
             </div>
             <div class="credits">
                 Designed by <a href="">Pika Merliza</a>
