--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <section id="why-us" class="why-us section-bg">
             <div class="container-fluid" data-aos="fade-up">
                 <div class="section-title">
-                    <h2>PENDAHULUAN</h2>
+                    <h2>Pendahuluan</h2>
                 </div>
                 <div class="row">
 
