--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- ======= Hero Section ======= -->
     <!-- ======= Hero Slider Section ======= -->
     <section id="hero-slider" class="hero-slider mt-3">
-        <div class="container-md" data-aos="fade-in">
+        <div class="container-fluid" data-aos="fade-in">
             <div class="row">
                 <div class="col-12">
                     <div class="swiper sliderFeaturedPosts">
