--- a/index.html
+++ b/index.html
@@ -158,9 +158,8 @@
             </div>
         </section>
         <!-- End Why Us Section -->
-        <section id="contact" class="contact">
+        <section id="contact" class="contact mb-3 section-bg">
             <div class="container" data-aos="fade-up">
-
                 <div class="section-title">
                     <h2>Tabel 1. Capaian Pembelajaran dan Tujuan Pembelajaran </h2>
                 </div>
