--- a/index.html
+++ b/index.html
@@ -120,41 +120,29 @@
 
         <!-- ======= Why Us Section ======= -->
         <section id="why-us" class="why-us section-bg">
-            <div class="container-fluid" data-aos="fade-up">
+            <div class="container" data-aos="fade-up">
                 <div class="section-title">
                     <h2>Pendahuluan</h2>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <div class="content">
-                            <h2 class="text-center">ِبِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيْم </h2>
-                        </div>
-                        <div class="accordion-list">
-                            <ul>
-                                <li class="rounded-4">
-                                    <p>
-                                        Modul ini merupakan bahan ajar yang dikembangkan agar Ananda dapat belajar secara mandiri. Modul ini akan membantu Ananda memahami konsep terkait bilangan. Modul ini dirancang dengan serangkaian aktivitas pembelajaran yang harus Ananda kerjakan. Pastikan
-                                        setiap aktivitas dapat diselesaikan dengan baik. Tanyakan kepada guru dan orang terdekat jika ananda mengalami kesulitan. Sebelum ananda tuntas pada satu materi, jangan dahulu lanjut kemateri berikutnya.
-                                    </p>
-                                    <p>
-                                        Strategi pembelajaran dalam modul ini memfasilitasi Ananda untuk belajar bermakna. Dengan melakukan aktivitas pembelajaran, Ananda diharapkan tidak hanya dapat menguasai kompetensi utama materi pembelajaran, Namun juga memperoleh pengalaman belajar seperti
-                                        literasi, pemecahan masalah, berfikir kreatif, komunikasi serta pengembangan karakter.
-                                    </p>
-                                    <p>Jangan jadikan masalah yang ananda temui menjadi alasan untuk ananda tidak bersemangat dan termotivasi, karena sesungguhnya Allah berfirman: <br> لَا يُكَلِّفُ اللّٰهُ نَفْسًا اِلَّا وُسْعَهَا ۗ لَهَا مَا كَسَبَتْ وَعَلَيْهَا
-                                        مَا اكْتَسَبَتْ ۗ رَبَّنَا لَا تُؤَاخِذْنَاۤ اِنْ نَّسِيْنَاۤ اَوْ اَخْطَأْنَا ۚ رَبَّنَا وَلَا تَحْمِلْ عَلَيْنَاۤ اِصْرًا كَمَا حَمَلْتَهٗ عَلَى الَّذِيْنَ مِنْ قَبْلِنَا ۚ رَبَّنَا وَلَا تُحَمِّلْنَا مَا لَا
-                                        طَا قَةَ لَنَا بِهٖ ۚ وَا عْفُ عَنَّا ۗ وَا غْفِرْ لَنَا ۗ وَا رْحَمْنَا ۗ اَنْتَ مَوْلٰٮنَا فَا نْصُرْنَا عَلَى الْقَوْمِ الْكٰفِرِيْنَ
-                                    </p>
-                                    <p class="fst-italic">Artinya: “Allah tidak membebani seseorang melainkan sesuai dengan kesanggupannya. Ia mendapat pahala (dari kebajikan) yang diusahakannya dan ia mendapat siksa (dari kejahatan) yang dikerjakannya. (Mereka berdoa): "Ya
-                                        Tuhan kami, janganlah Engkau hukum kami jika kami lupa atau kami tersalah. Ya Tuhan kami, janganlah Engkau bebankan kepada kami beban yang berat sebagaimana Engkau bebankan kepada orang-orang sebelum kami. Ya Tuhan
-                                        kami, janganlah Engkau pikulkan kepada kami apa yang tak sanggup kami memikulnya. Beri maaflah kami; ampunilah kami; dan rahmatilah kami. Engkaulah Penolong kami, maka tolonglah kami terhadap kaum yang kafir"(QS.
-                                        Al-Baqarah: 286).
-                                    </p>
-                                </li>
-                            </ul>
-                        </div>
+                <div class="card shadow">
+                    <div class="card-body p-4">
+                        <h4 class="text-center"><code>بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيْم </code></h4>
+                        <p class="">Modul ini merupakan bahan ajar yang dikembangkan agar Ananda dapat belajar secara mandiri. Modul ini akan membantu Ananda memahami konsep terkait bilangan. Modul ini dirancang dengan serangkaian aktivitas pembelajaran yang harus
+                            Ananda kerjakan. Pastikan setiap aktivitas dapat diselesaikan dengan baik. Tanyakan kepada guru dan orang terdekat jika ananda mengalami kesulitan. Sebelum ananda tuntas pada satu materi, jangan dahulu lanjut kemateri berikutnya.</p>
+                        <p>
+                            Strategi pembelajaran dalam modul ini memfasilitasi Ananda untuk belajar bermakna. Dengan melakukan aktivitas pembelajaran, Ananda diharapkan tidak hanya dapat menguasai kompetensi utama materi pembelajaran, Namun juga memperoleh pengalaman belajar seperti
+                            literasi, pemecahan masalah, berfikir kreatif, komunikasi serta pengembangan karakter.
+                        </p>
+                        <p>Jangan jadikan masalah yang ananda temui menjadi alasan untuk ananda tidak bersemangat dan termotivasi, karena sesungguhnya Allah berfirman: <br> لَا يُكَلِّفُ اللّٰهُ نَفْسًا اِلَّا وُسْعَهَا ۗ لَهَا مَا كَسَبَتْ وَعَلَيْهَا مَا
+                            اكْتَسَبَتْ ۗ رَبَّنَا لَا تُؤَاخِذْنَاۤ اِنْ نَّسِيْنَاۤ اَوْ اَخْطَأْنَا ۚ رَبَّنَا وَلَا تَحْمِلْ عَلَيْنَاۤ اِصْرًا كَمَا حَمَلْتَهٗ عَلَى الَّذِيْنَ مِنْ قَبْلِنَا ۚ رَبَّنَا وَلَا تُحَمِّلْنَا مَا لَا طَا قَةَ لَنَا بِهٖ
+                            ۚ وَا عْفُ عَنَّا ۗ وَا غْفِرْ لَنَا ۗ وَا رْحَمْنَا ۗ اَنْتَ مَوْلٰٮنَا فَا نْصُرْنَا عَلَى الْقَوْمِ الْكٰفِرِيْنَ
+                        </p>
+                        <p class="fst-italic">Artinya: “Allah tidak membebani seseorang melainkan sesuai dengan kesanggupannya. Ia mendapat pahala (dari kebajikan) yang diusahakannya dan ia mendapat siksa (dari kejahatan) yang dikerjakannya. (Mereka berdoa): "Ya Tuhan kami,
+                            janganlah Engkau hukum kami jika kami lupa atau kami tersalah. Ya Tuhan kami, janganlah Engkau bebankan kepada kami beban yang berat sebagaimana Engkau bebankan kepada orang-orang sebelum kami. Ya Tuhan kami, janganlah Engkau
+                            pikulkan kepada kami apa yang tak sanggup kami memikulnya. Beri maaflah kami; ampunilah kami; dan rahmatilah kami. Engkaulah Penolong kami, maka tolonglah kami terhadap kaum yang kafir"(QS. Al-Baqarah: 286).
+                        </p>
                     </div>
                 </div>
-
             </div>
         </section>
         <!-- End Why Us Section -->
@@ -163,9 +151,7 @@
                 <div class="section-title">
                     <h2>Tabel 1. Capaian Pembelajaran dan Tujuan Pembelajaran </h2>
                 </div>
-
                 <div class="row">
-
                     <div class="col d-flex align-items-stretch">
                         <div class="info">
                             <table class="table">
