--- a/materi1.html
+++ b/materi1.html
@@ -41,31 +41,58 @@
 <body>
 
     <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top ">
-        <div class="container d-flex align-items-center">
+    <section id="hero-slider" class="hero-slider mt-3">
+        <div class="container-fluid" data-aos="fade-in">
+            <div class="row">
+                <div class="col-12">
+                    <div class="swiper sliderFeaturedPosts">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('./assets/img/portfolio/rumah-honai-1.jpg');">
+                                    <div class="img-bg-inner">
+                                        <h2>Modul Pembelajaran Etnomatematika Berbasis Website Untuk Meningkatkan Kemampuan Literasi Matematis</h2>
 
-            <!-- Uncomment below if you prefer to use an image logo -->
-            <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+                                    </div>
+                                </a>
+                            </div>
 
-            <nav id="navbar" class="navbar">
-                <ul>
-                    <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-                    <li><a class="nav-link scrollto" href="materi.html">Materi</a></li>
-                    <li><a class="nav-link scrollto" href="#">Uji Kompetensi</a></li>
-                    <li><a class="nav-link   scrollto" href="#">Daftar Pustaka</a></li>
-                    <li><a class="nav-link" href="petunjuk.html">Petunjuk Penggunaan</a></li>
-                    <li><button class="getstarted btn btn-watch-video play" id="play-btn"><i class="bi bi-play-circle mx-2"></i><span><audio id="track">
-                        <source src="./assets/TARI - WONDERLAND NUSANTARA  Special Perfomance  BOCIL SQUAD  MOMMY BINTANG.mp3" type="audio/mpeg" />
-                      </audio>Music</span>
-                    </button>
-                    </li>
-                </ul>
-                <i class="bi bi-list mobile-nav-toggle"></i>
-            </nav>
-            <!-- .navbar -->
+                            <div class="swiper-slide">
+                                <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('https://asset-a.grid.id/crop/0x0:0x0/x/photo/2022/08/13/6-budaya-indonesia-yang-terkenal-20220813022716.jpg');">
+                                    <div class="img-bg-inner">
+                                        <h2>Indonesia memiliki keanekaragaman budaya yang merupakan sebuah keindahan.</h2>
+                                    </div>
+                                </a>
+                            </div>
 
+                            <div class="swiper-slide">
+                                <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('https://ik.imagekit.io/tvlk/blog/2021/01/Tari-Saman-shutterstock_513759277-1024x680.jpeg?tr=dpr-2,w-675');">
+                                    <div class="img-bg-inner">
+                                        <h2>Etnomatematika merupakan kajian yang mengaitkan hubungan antara matematika dan budaya. </h2>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="swiper-slide">
+                                <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('./assets/img/portfolio/siger-1.webp');">
+                                    <div class="img-bg-inner">
+                                        <h2>Website ini merupakan bahan ajar yang dikembangkan untuk dapat menumbuhkan kecintaan dan kebanggaan terhadap budaya Indonesia.</h2>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="custom-swiper-button-next">
+                            <span class="bi-chevron-right"></span>
+                        </div>
+                        <div class="custom-swiper-button-prev">
+                            <span class="bi-chevron-left"></span>
+                        </div>
+
+                        <div class="swiper-pagination"></div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </header>
+    </section>
     <!-- End Header -->
 
     <!-- ======= Hero Section ======= -->
@@ -257,25 +284,9 @@
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
-
-        <div class="footer-top">
-            <div class="container">
-                <div class="row">
-
-                    <div class="col footer-contact">
-                        <h3>Pika Merliza, M.Pd</h3>
-                        <p>Jl. Ki Hajar Dewantara 15A Iringmulyo, Metro Timur,<br> Kota Metro, Lampung.<br><br>
-                            <strong>Phone:</strong> (628)218-270-2390<br>
-                            <strong>Email:</strong> pikamerliza@metrouniv.ac.id<br>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <div class="container footer-bottom clearfix">
             <div class="copyright">
-                &copy; Copyright 2023 - <strong><span>Pika Merliza</span></strong>. IAIN Metro
+                &copy; Copyright 2023 - <strong><span>Tim Pengembang</span></strong>. IAIN Metro
             </div>
             <div class="credits">
                 Designed by <a href="">Pika Merliza</a>
