--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 <ul>
                     <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
                     <li><a class="nav-link scrollto" href="materi.html">Materi</a></li>
-                    <li><a class="nav-link scrollto" href="#">Uji Kompetensi</a></li>
-                    <li><a class="nav-link   scrollto" href="#">Daftar Pustaka</a></li>
+                    <li><a class="nav-link scrollto" href="ujikom.html">Uji Kompetensi</a></li>
+                    <li><a class="nav-link   scrollto" href="daftarpustaka.html">Daftar Pustaka</a></li>
                     <li><a class="nav-link" href="petunjuk.html">Petunjuk Penggunaan</a></li>
                     <li><button class="getstarted btn btn-watch-video play" id="play-btn"><i class="bi bi-play-circle mx-2"></i><span><audio id="track">
                         <source src="./assets/TARI - WONDERLAND NUSANTARA  Special Perfomance  BOCIL SQUAD  MOMMY BINTANG.mp3" type="audio/mpeg" />
