--- a/ujikom.html
+++ b/ujikom.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Materi | Perbandingan Berbalik Nilai</title>
+    <title>Uji Kompetensi</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -29,17 +29,9 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
 
-    <!-- =======================================================
-  * Template Name: Arsha
-  * Updated: Aug 30 2023 with Bootstrap v5.3.1
-  * Template URL: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
-
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top ">
         <div class="container d-flex align-items-center">
@@ -51,8 +43,8 @@
                 <ul>
                     <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
                     <li><a class="nav-link scrollto" href="materi.html">Materi</a></li>
-                    <li><a class="nav-link scrollto" href="#">Uji Kompetensi</a></li>
-                    <li><a class="nav-link   scrollto" href="#">Daftar Pustaka</a></li>
+                    <li><a class="nav-link scrollto" href="ujikom.html">Uji Kompetensi</a></li>
+                    <li><a class="nav-link   scrollto" href="daftarpustaka.html">Daftar Pustaka</a></li>
                     <li><a class="nav-link" href="petunjuk.html">Petunjuk Penggunaan</a></li>
                     <li><button class="getstarted btn btn-watch-video play" id="play-btn"><i class="bi bi-play-circle mx-2"></i><span><audio id="track">
                         <source src="./assets/TARI - WONDERLAND NUSANTARA  Special Perfomance  BOCIL SQUAD  MOMMY BINTANG.mp3" type="audio/mpeg" />
@@ -80,6 +72,7 @@
                                 <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('./assets/img/portfolio/rumah-honai-1.jpg');">
                                     <div class="img-bg-inner">
                                         <h2>Modul Pembelajaran Etnomatematika Berbasis Website Untuk Meningkatkan Kemampuan Literasi Matematis</h2>
+
                                     </div>
                                 </a>
                             </div>
@@ -125,41 +118,110 @@
 
     <main id="main">
 
-        <!-- ======= Services Section ======= -->
-        <section id="services" class="services section-bg">
+        <!-- ======= Why Us Section ======= -->
+        <section id="why-us" class="why-us section-bg">
             <div class="container" data-aos="fade-up">
-
                 <div class="section-title">
-                    <h2>Perbandingan Berbalik Nilai</h2>
+                    <h2>Pendahuluan</h2>
+                </div>
+                <div class="card shadow">
+                    <div class="card-body p-4">
+                        <h4 class="text-center"><code>بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيْم </code></h4>
+                        <p class="">Modul ini merupakan bahan ajar yang dikembangkan agar Ananda dapat belajar secara mandiri. Modul ini akan membantu Ananda memahami konsep terkait bilangan. Modul ini dirancang dengan serangkaian aktivitas pembelajaran yang harus
+                            Ananda kerjakan. Pastikan setiap aktivitas dapat diselesaikan dengan baik. Tanyakan kepada guru dan orang terdekat jika ananda mengalami kesulitan. Sebelum ananda tuntas pada satu materi, jangan dahulu lanjut kemateri berikutnya.</p>
+                        <p>
+                            Strategi pembelajaran dalam modul ini memfasilitasi Ananda untuk belajar bermakna. Dengan melakukan aktivitas pembelajaran, Ananda diharapkan tidak hanya dapat menguasai kompetensi utama materi pembelajaran, Namun juga memperoleh pengalaman belajar seperti
+                            literasi, pemecahan masalah, berfikir kreatif, komunikasi serta pengembangan karakter.
+                        </p>
+                        <p>Jangan jadikan masalah yang ananda temui menjadi alasan untuk ananda tidak bersemangat dan termotivasi, karena sesungguhnya Allah berfirman: <br> لَا يُكَلِّفُ اللّٰهُ نَفْسًا اِلَّا وُسْعَهَا ۗ لَهَا مَا كَسَبَتْ وَعَلَيْهَا مَا
+                            اكْتَسَبَتْ ۗ رَبَّنَا لَا تُؤَاخِذْنَاۤ اِنْ نَّسِيْنَاۤ اَوْ اَخْطَأْنَا ۚ رَبَّنَا وَلَا تَحْمِلْ عَلَيْنَاۤ اِصْرًا كَمَا حَمَلْتَهٗ عَلَى الَّذِيْنَ مِنْ قَبْلِنَا ۚ رَبَّنَا وَلَا تُحَمِّلْنَا مَا لَا طَا قَةَ لَنَا بِهٖ
+                            ۚ وَا عْفُ عَنَّا ۗ وَا غْفِرْ لَنَا ۗ وَا رْحَمْنَا ۗ اَنْتَ مَوْلٰٮنَا فَا نْصُرْنَا عَلَى الْقَوْمِ الْكٰفِرِيْنَ
+                        </p>
+                        <p class="fst-italic">Artinya: “Allah tidak membebani seseorang melainkan sesuai dengan kesanggupannya. Ia mendapat pahala (dari kebajikan) yang diusahakannya dan ia mendapat siksa (dari kejahatan) yang dikerjakannya. (Mereka berdoa): "Ya Tuhan kami,
+                            janganlah Engkau hukum kami jika kami lupa atau kami tersalah. Ya Tuhan kami, janganlah Engkau bebankan kepada kami beban yang berat sebagaimana Engkau bebankan kepada orang-orang sebelum kami. Ya Tuhan kami, janganlah Engkau
+                            pikulkan kepada kami apa yang tak sanggup kami memikulnya. Beri maaflah kami; ampunilah kami; dan rahmatilah kami. Engkaulah Penolong kami, maka tolonglah kami terhadap kaum yang kafir"(QS. Al-Baqarah: 286).
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Why Us Section -->
+        <section id="contact" class="contact mb-3 section-bg">
+            <div class="container" data-aos="fade-up">
+                <div class="section-title">
+                    <h2>Tabel 1. Capaian Pembelajaran dan Tujuan Pembelajaran </h2>
                 </div>
                 <div class="row">
-                    <div class="col " data-aos="zoom-in" data-aos-delay="100">
-                        <div class="icon-box">
-                            <div class="portfolio-img d-flex flex-column align-items-center mt-3">
-                                <img src="assets/img/portfolio/Picture4.jpg " class="w-lg-50 img-fluid" alt="">
-                                <p class="fw-bold text-center">Gambar 4. Keragaman Budaya Indonesia</p>
-                                <p class="fw-light text-center mb-3">Sumber: https://berita.99.co/keragaman-budaya-indonesia/</p>
-                            </div>
-                            <p>Indonesia dikenal sebagai Negara yang sangat beragam, keragaman dan kekayaan budaya yang berlimpah dengan memiliki 742 bahasa/dialek dari keragaman 478 suku bangsa. Suku bangsa yang tersebar dari Sabang hingga Merauke. </p>
-                            <p>Luasa wilayah Indonesia dari ujung barat dan timur Indonesia mencapai 5 120 km yang jika ditempuuh dengan menggunakan pesawat kurang lebih 12 jam waktu penerbangan. Sementara panjang dari selatan ke utara dengan luasan 1700
-                                km. Sedangkan panjang jarak dari selatan ke utara, lebih dari 1.700 km. Bayangkan, panjang pantai Indonesia sekitar 104.000 km, menduduki urutan nomor empat sebagai negara yang memiliki pantai terpanjang di dunia," katanya.
-                            </p>
+                    <div class="col d-flex align-items-stretch">
+                        <div class="info">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Capain Pembelajaran</th>
+                                        <th scope="col">Tujuan Pembelajaran</th>
 
-                            <p>Sedangkan luas daratan Indonesia, menurutnya, lebih dari dua juta kilometer, dengan luas lautan hampir tiga kali lipatnya. Artinya, dua per tiga wilayah Indonesia adalah lautan. "Hampir seperti penduduk Takalar yang mayoritas
-                                berprofesi di laut," katanya.</p>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+
+                                        <td rowspan="3">Di akhir fase D, peserta didik dapat membaca, menulis,dan membandingkan bilangan bulat, bilangan rasional dan irasional, bilangan desimal, bilangan berpangkat bulat dan akar, bilangan dalam notasi ilmiah. Mereka
+                                            dapat menerapkan operasi aritmetika pada bilangan real, dan memberikan estimasi/perkiraan dalam menyelesaikan masalah termasuk berkaitan dengan (literasi finansial). Peserta didik dapat menggunakan faktorisasi
+                                            prima dan pengertian rasio (skala, proporsi, dan laju perubahan) dalam penyelesaian masalah. </td>
+                                        <td>
+                                            1. Peserta didik mampu menyelesaikan permasalahan berkaitan dengan konsep rasio (skala, proporsi) dalam kehidupan sehari-hari.
+                                        </td>
+                                    </tr>
+                                    <tr>
+
+                                        <td>2. Peserta didik mampu menyelesaikan permasalahan berkaitan dengan konsep rasio (laju perubahan) dalam keseharian murid</td>
+                                    </tr>
+                                    <tr>
+
+                                        <td>3. Peserta didik mampu menyelesaikan permasalahan berkaitan dengan konsep perbandingan senilai dan berbalik nilai dalam keseharian murid. </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
+
                     </div>
+
+
                 </div>
 
             </div>
         </section>
-        <!-- End Services Section -->
 
     </main>
     <!-- End #main -->
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
+
+        <!-- <div class="footer-newsletter">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-6">
+                        <h4>Join Our Newsletter</h4>
+                        <form action="" method="post">
+                            <input type="email" name="email"><input type="submit" value="Subscribe">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+        <!-- 
+        <div class="footer-top">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col footer-contact">
+                        <h5>Tim Pengembang Website</h5>
+
+                    </div>
+                </div>
+            </div>
+        </div> -->
 
         <div class="container footer-bottom clearfix">
             <div class="copyright">
@@ -188,7 +250,5 @@
     <script src="assets/js/main.js"></script>
 
 </body>
-
-</html>
 
 </html>
