--- a/materi1.html
+++ b/materi1.html
@@ -107,7 +107,7 @@
     <!-- End Header -->
     <main id="main">
         <!-- ======= Services Section ======= -->
-        <section id="services" class="services section-bg">
+        <section id="services" class="services section-bg mb-2">
             <div class="container" data-aos="fade-up">
                 <div class="section-title">
                     <h2>Konsep Perbandingan (Rasio dan Proporsi)</h2>
@@ -139,8 +139,8 @@
                             <p>Menurut ananda, manakah dari pernyataan-pernyataan diatas yang menjelaskan perbandingan banyak jumlah laki-laki dan perempuan di dalam foto tersebut. Berikan alasan ananda.</p>
                             <h5 class="fw-bold mt-3">Aktivitas 2</h5>
                             <p>Perhatikan video berikut ini.</p>
-                            <div class="ratio ratio-16x9">
-                                <iframe src="https://www.youtube.com/embed/QUT-k6v63dw" title="YouTube video" allowfullscreen></iframe>
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/QUT-k6v63dw" title="YouTube video" allowfullscreen></iframe>
                             </div>
                             <div class="badge bg-dark text-wrap mt-3 p-2" style="width: 6rem;">
                                 Submit Tugas
@@ -230,7 +230,6 @@
             </div>
         </section>
         <!-- End Services Section -->
-
     </main>
     <!-- End #main -->
 
