--- a/daftarpustaka.html
+++ b/daftarpustaka.html
@@ -86,7 +86,7 @@
     <!-- End #main -->
 
     <!-- ======= Footer ======= -->
-    <footer id="footer" class="position-relative bottom-0">
+    <footer style="left: 0; right: 0;" id="footer" class="position-fixed bottom-0">
         <div class="container footer-bottom clearfix">
             <div class="copyright">
                 &copy; Copyright 2023 - <strong><span>Tim Pengembang</span></strong>. IAIN Metro
