--- a/index.html
+++ b/index.html
@@ -169,16 +169,16 @@
                                             dapat menerapkan operasi aritmetika pada bilangan real, dan memberikan estimasi/perkiraan dalam menyelesaikan masalah termasuk berkaitan dengan (literasi finansial). Peserta didik dapat menggunakan faktorisasi
                                             prima dan pengertian rasio (skala, proporsi, dan laju perubahan) dalam penyelesaian masalah. </td>
                                         <td>
-                                            1. Peserta didik mampu menyelesaikan permasalahan berkaitan dengan konsep rasio (skala, proporsi) dalam kehidupan sehari-hari.
+                                            1. Peserta didik mampu menyelesaikan permasalahan berkaitan dengan konsep rasio (skala, proporsi) dalam kehidupan sehari-hari
                                         </td>
                                     </tr>
                                     <tr>
 
-                                        <td>2. Peserta didik mampu menyelesaikan permasalahan berkaitan dengan konsep rasio (laju perubahan) dalam keseharian murid</td>
+                                        <td>2. Peserta didik mampu menyelesaikan permasalahan berkaitan dengan konsep rasio (laju perubahan) dalam kehidupan sehari-hari</td>
                                     </tr>
                                     <tr>
 
-                                        <td>3. Peserta didik mampu menyelesaikan permasalahan berkaitan dengan konsep perbandingan senilai dan berbalik nilai dalam keseharian murid. </td>
+                                        <td>3. Peserta didik mampu menyelesaikan permasalahan berkaitan dengan konsep perbandingan senilai dan berbalik nilai dalam kehidupan sehari-hari. </td>
                                     </tr>
                                 </tbody>
                             </table>
