--- a/petunjuk.html
+++ b/petunjuk.html
@@ -28,14 +28,6 @@
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
-
-    <!-- =======================================================
-  * Template Name: Arsha
-  * Updated: Aug 30 2023 with Bootstrap v5.3.1
-  * Template URL: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -50,8 +42,8 @@
                 <ul>
                     <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
                     <li><a class="nav-link scrollto" href="materi.html">Materi</a></li>
-                    <li><a class="nav-link scrollto" href="#">Uji Kompetensi</a></li>
-                    <li><a class="nav-link   scrollto" href="#">Daftar Pustaka</a></li>
+                    <li><a class="nav-link scrollto" href="ujikom.html">Uji Kompetensi</a></li>
+                    <li><a class="nav-link   scrollto" href="daftarpustaka.html">Daftar Pustaka</a></li>
                     <li><a class="nav-link" href="petunjuk.html">Petunjuk Penggunaan</a></li>
                     <li><button class="getstarted btn btn-watch-video play" id="play-btn"><i class="bi bi-play-circle mx-2"></i><span><audio id="track">
                         <source src="./assets/TARI - WONDERLAND NUSANTARA  Special Perfomance  BOCIL SQUAD  MOMMY BINTANG.mp3" type="audio/mpeg" />
@@ -126,7 +118,7 @@
     <main id="main">
 
         <!-- ======= Services Section ======= -->
-        <section id="services" class="services section-bg">
+        <section id="services" class="services section-bg mb-3">
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
